# trawl

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  trawl-run.sh  trawl.py
examples/: trawl_spec.yml
src/trawl/: __init__.py  __main__.py  __version__.py  commands.py
src/trawl/loader/: __init__.py  models.py
